# ci-secrets-management

./: .env  README.md  db.sqlite3  pyproject.toml  requirements.txt
auditlogs/: models.py  urls.py  views.py
auditlogs/migrations/: 0001_initial.py  0002_auditlog_ip_address.py
civault_cli/: __init__.py  __main__.py  cli.py
cli/: civault.py  vault_agent.py
config/: settings.py  urls.py
docs/: hashicorp-style-vault-ui-e2e-plan.md
notifications/: apps.py  crypto_utils.py  models.py  scheduler.py  urls.py  utils.py  views.py
notifications/migrations/: 0001_initial.py  0002_emailconfig_notified.py  0003_encrypt_email_app_password.py  0004_emailconfig_google_chat_webhook_encrypted.py  0005_emailconfig_microsoft_teams_channel_and_more.py
scripts/: install_linux.sh  install_windows.ps1
templates/: add_secret.html  dashboard.html  initialize.html  login.html  root_token_login.html  sealed.html  show_shares.html  unseal.html
vault/: context_processors.py  crypto_utils.py  middleware.py  models.py  security.py  session_auth_middleware.py  tests.py  urls.py  utils.py  views.py
vault/migrations/: 0001_initial.py  0002_vaultconfig_threshold_vaultconfig_total_shares.py  0003_remove_vaultconfig_created_at_and_more.py  0004_vaultconfig_device_id.py  0005_remove_vaultconfig_device_id_and_more.py  0006_webauthndevice.py  0007_webauthndevice_mobile_fields.py  0009_shamir_unseal_refactor.py  (+4 more)
vault_cli/: __init__.py  cli.py  config.py  vault_api.py
vault_dashboard/: admin.py  apps.py  feature_access.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
(+28 files in other folders)
