[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civault-cli"
version = "0.1.0"
description = "Official CLI for CI Vault (civault)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "CI Vault Team" }
]
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
civault = "civault_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["civault_cli*"]
